examples/test/testpolicy17527.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17527
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key24: value20
      key47: value14
      key9: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value36
          key18: value10
      podSelector:
        matchLabels:
          key42: value5
